--- a/admin/admin.html
+++ b/admin/admin.html
@@ -6,6 +6,7 @@
     <title>Admin Page</title>
     <link rel="stylesheet" href="../res/css/adminStyle.css">
     <script src="../res/js/javascript.js"></script>
+    <script src="../res/js/chart.min.js"></script>
 </head>
 
 <body>
@@ -27,8 +28,40 @@
     <div class="main-container">
         <div class="left-container">
             <div class="analytics">
-                Visitor analytics
+                <div class="col-md-8">
+                    <div class="card card-round">
+                      <div class="card-header">
+                        <div class="card-head-row">
+                          <div class="card-title">Visitor Statistics</div>
+                          <div class="card-tools">
+                            <a
+                              href="#"
+                              class="btn btn-label-success btn-round btn-sm me-2"
+                            >
+                              <span class="btn-label">
+                                <i class="fa fa-pencil"></i>
+                              </span>
+                              Export
+                            </a>
+                            <a href="#" class="btn btn-label-info btn-round btn-sm">
+                              <span class="btn-label">
+                                <i class="fa fa-print"></i>
+                              </span>
+                              Print
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="card-body">
+                        <div class="chart-container" style="min-height: 375px">
+                          <canvas id="statisticsChart"></canvas>
+                        </div>
+                        <div id="myChartLegend"></div>
+                      </div>
+                    </div>
+                  </div>
             </div>
+            
         </div>
 
         <div class="right-container">
@@ -280,6 +313,164 @@
         closeIcons.forEach(icon => {
             icon.addEventListener('click', hidePopup);
         });
+
+        // Function to fetch artifact options
+        function fetchArtifactOptions() {
+            fetch('include/get.php')
+                .then(response => response.json())
+                .then(data => {
+                    // Populate the section select
+                    let sectionSelect = document.getElementById('section');
+                    sectionSelect.innerHTML = '<option value="create_section">Create Section</option>';
+                    data.sections.forEach(section => {
+                        let option = document.createElement('option');
+                        option.value = section.section_id;
+                        option.textContent = section.section_name;
+                        sectionSelect.appendChild(option);
+                    });
+
+                    // Populate the catalogue select
+                    let catalogueSelect = document.getElementById('catalog');
+                    catalogueSelect.innerHTML = '<option value="create_catalog">Create Catalog</option>';
+                    data.catalogues.forEach(catalogue => {
+                        let option = document.createElement('option');
+                        option.value = catalogue.catalogue_id;
+                        option.textContent = catalogue.catalogue_name;
+                        catalogueSelect.appendChild(option);
+                    });
+
+                    // Populate the subcatalogue select
+                    let subcatalogueSelect = document.getElementById('sub-catalog');
+                    subcatalogueSelect.innerHTML = '<option value="create_subcatalog">Create Sub Catalog</option>';
+                    data.subcatalogues.forEach(subcatalogue => {
+                        let option = document.createElement('option');
+                        option.value = subcatalogue.subcat_id;
+                        option.textContent = subcatalogue.subcat_name;
+                        subcatalogueSelect.appendChild(option);
+                    });
+                })
+                .catch(error => console.error('Error fetching options:', error));
+        }
+        document.addEventListener("DOMContentLoaded", fetchArtifactOptions);
+
+        
+//Chart
+
+var ctx = document.getElementById('statisticsChart').getContext('2d');
+
+var statisticsChart = new Chart(ctx, {
+	type: 'line',
+	data: {
+		labels: ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"],
+		datasets: [ {
+			label: "Louisians",
+			borderColor: '#fdaf4b',
+			pointBackgroundColor: 'rgba(253, 175, 75, 0.6)',
+			pointRadius: 0,
+			backgroundColor: 'rgba(253, 175, 75, 0.4)',
+			legendColor: '#fdaf4b',
+			fill: true,
+			borderWidth: 2,
+			data: [456, 430, 345, 287, 340, 450, 630, 595, 331, 431, 456, 521]
+		}, {
+			label: "Out-of-School Visitors",
+			borderColor: '#177dff',
+			pointBackgroundColor: 'rgba(23, 125, 255, 0.6)',
+			pointRadius: 0,
+			backgroundColor: 'rgba(23, 125, 255, 0.4)',
+			legendColor: '#177dff',
+			fill: true,
+			borderWidth: 2,
+			data: [42, 480, 430, 150, 330, 453, 380, 334, 268, 210, 300, 500]
+		}]
+	},
+	options : {
+		responsive: true, 
+		maintainAspectRatio: false,
+		legend: {
+			display: false
+		},
+		tooltips: {
+			bodySpacing: 4,
+			mode:"nearest",
+			intersect: 0,
+			position:"nearest",
+			xPadding:10,
+			yPadding:10,
+			caretPadding:10
+		},
+		layout:{
+			padding:{left:5,right:5,top:15,bottom:15}
+		},
+		scales: {
+			yAxes: [{
+				ticks: {
+					fontStyle: "500",
+					beginAtZero: false,
+					maxTicksLimit: 5,
+					padding: 10
+				},
+				gridLines: {
+					drawTicks: false,
+					display: false
+				}
+			}],
+			xAxes: [{
+				gridLines: {
+					zeroLineColor: "transparent"
+				},
+				ticks: {
+					padding: 10,
+					fontStyle: "500"
+				}
+			}]
+		}, 
+		legendCallback: function(chart) { 
+			var text = []; 
+			text.push('<ul class="' + chart.id + '-legend html-legend">'); 
+			for (var i = 0; i < chart.data.datasets.length; i++) { 
+				text.push('<li><span style="background-color:' + chart.data.datasets[i].legendColor + '"></span>'); 
+				if (chart.data.datasets[i].label) { 
+					text.push(chart.data.datasets[i].label); 
+				} 
+				text.push('</li>'); 
+			} 
+			text.push('</ul>'); 
+			return text.join(''); 
+		}  
+	}
+});
+
+var myLegendContainer = document.getElementById("myChartLegend");
+
+// generate HTML legend
+myLegendContainer.innerHTML = statisticsChart.generateLegend();
+
+// bind onClick event to all LI-tags of the legend
+var legendItems = myLegendContainer.getElementsByTagName('li');
+for (var i = 0; i < legendItems.length; i += 1) {
+	legendItems[i].addEventListener("click", legendClickCallback, false);
+}
+
+function legendClickCallback(event) {
+	event = event || window.event;
+
+	var target = event.target || event.srcElement;
+	while (target.nodeName !== 'LI') {
+		target = target.parentElement;
+	}
+	var parent = target.parentElement;
+	var chartId = parseInt(parent.classList[0].split("-")[0], 10);
+	var chart = Chart.instances[chartId];
+	var index = Array.prototype.slice.call(parent.children).indexOf(target);
+
+	chart.legend.options.onClick.call(chart, event, chart.legend.legendItems[index]);
+	if (chart.isDatasetVisible(index)) {
+		target.classList.remove('hidden');
+	} else {
+		target.classList.add('hidden');
+	}
+}
     </script>
 </body>
 </html>
