--- a/igorot-dances.html
+++ b/igorot-dances.html
@@ -19,7 +19,7 @@
     <button class="btn btn-radius btn-sm btn-secondary toggle-sidebar"><i class="fa fa-angle-left mr-2"></i>Close menu
     </button>
     <ul class="nav sidebar_menu-list">
-        <li class="nav-item active"><a class="nav-link" href="/"
+        <li class="nav-item active"><a class="nav-link" href="homepage.html"
                                        title="Home">Home</a></li>
         <li class="nav-item">
             <div class="toggle-submenu" data-toggle="collapse" data-target="#sidebar_subs_genre" aria-expanded="false"
@@ -52,13 +52,13 @@
         <div id="header">
     <div class="container">
         <div id="mobile_menu"><i class="fa fa-bars"></i></div>
-        <a href="/" id="logo"><img src="assets\img\logo.png" alt="Logo">
+        <a href="homepage.html" id="logo"><img src="assets\img\logo.png" alt="Logo">
             
         </a>
         <!--Begin: Menu-->
         <div id="header_menu">
             <ul class="nav header_menu-list">
-                <li class="nav-item"><a href="/" title="Home">Home</a></li>
+                <li class="nav-item"><a href="homepage.html" title="Home">Home</a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Genres
