edited dances.css and igorot-dances.html

--- a/igorot-dances.html
+++ b/igorot-dances.html
@@ -487,10 +487,10 @@
             </div>
         </div>
         <div class="footer-notice">
-            <span>All videos on this site are produced by the SLU Museum of Igorot Culture and Arts to document and preserve Igorot heritage. Unauthorized reproduction or distribution is prohibited.</span>
+            <span>All videos on this site are produced by the <strong>SLU Museum of Igorot Culture and Arts</strong> to document and preserve Igorot heritage. Unauthorized reproduction or distribution is prohibited.</span>
         </div>
         <div class="footer-logo-block">
-            <a href="/" class="footer-logo"><img
+            <a href="https://www.facebook.com/slumuseum" class="footer-logo"><img
                         src="assets\img\logo.png" alt="Logo footer"></a>
             <p class="copyright">© 2024 SLU Museum of Igorot Culture and Arts. All Rights Reserved.</p>
         </div>
