--- a/guest-login.html
+++ b/guest-login.html
@@ -69,9 +69,13 @@
           </div>
           <button type="submit" class="btn-access" id="btn-submit">
             Submit
-          </button>
+        </button>
         </form>
       </div>
+    </div>
+
+    <div id="desktop-warning">
+      Mobile Only Site.
     </div>
 
     <script>
@@ -109,6 +113,29 @@
           return false; // Prevent the default form action to avoid page reload
         }
       }
+
+      function checkDevice() {
+        // Define a breakpoint for mobile devices (e.g., 768px)
+        if (window.innerWidth > 768) {
+            // Show the overlay first
+            document.getElementById('desktop-warning').style.display = 'flex';
+
+            // Delay the alert to ensure the overlay is visible first
+            setTimeout(function() {
+                alert("Please use your mobile phone to access this site.");
+            }, 100); // Adjust the delay (in ms) if necessary
+        }
+    }
+
+    // Add event listener to the submit button
+    document.getElementById('btn-submit').addEventListener('click', function(event) {
+        // Prevent default form submission (optional, if this is part of a form)
+        event.preventDefault();
+
+        // Check the device size when the user clicks Submit
+        validateForm();
+        checkDevice();
+    });
     </script>
   </body>
 </html>
