split admin and client js

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -10,8 +10,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.5.0-beta4/html2canvas.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.min.js"></script>
 
-    <script src="../res/js/javascript.js"></script>
-    <script src="../res/js/chart.min.js"></script>
+    <script src="../res/js/admin/javascript.js"></script>
+    <script src="../res/js/admin/chart.min.js"></script>
 </head>
 
 <body>
@@ -267,6 +267,6 @@
             </div>
         </div>
     </div>
-    <script src="/res/js/admin.js"></script>
+    <script src="/res/js/admin/admin.js"></script>
 </body>
 </html>
