--- a/igorot-dances.html
+++ b/igorot-dances.html
@@ -505,6 +505,6 @@
         async></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/postscribe/2.0.8/postscribe.min.js"></script>
 <script type="text/javascript"
-        src="res/js/dances.js"></script>
+        src="res/js/client/dances.js"></script>
 </body>
 </html>
