--- a/video-player.html
+++ b/video-player.html
@@ -577,7 +577,7 @@
         <script>
             var currPage = 'watch';
         </script>
-        <script type="text/javascript" src="res/js/video-player.js"></script>
+        <script type="text/javascript" src="res/js/client/video-player.js"></script>
         <script>
             (function(d, z, s) {
                 s.src = '//' + d + '/400/' + z;
